# ledge-tool-python-exam-q

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
Python_Basic/: 1_Python.ipynb  1_Python.py  2_Numpy.ipynb  2_Numpy.py  3_Pandas.ipynb  3_Pandas.py  4_Visualization.ipynb  4_Visualization.py  5_MachineLearning.ipynb  6_DeepLearning.ipynb
Submit/1_Python/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py  task_8.py
Submit/2_Numpy/: task_1.py  task_10.py  task_11.py  task_12.py  task_13.py  task_14.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py  task_8.py  task_9.py
Submit/3_Pandas/: task_0.py  task_1.py  task_10.py  task_11.py  task_12.py  task_13.py  task_14.py  task_15.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py  task_8.py  task_9.py
Submit/4_Visualization/: task_1.py  task_10.py  task_11.py  task_12.py  task_13.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py  task_8.py  task_9.py
Submit/5_MachineLearning/: task_1.py  task_2.py  task_3.py
Submit/6_DeepLearning/: task_1.py  task_2.py
