[tool.poetry]
name = "python-exam"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.18.5"
pandas = "^1.1.0"
matplotlib = "3.3.0"
seaborn = "^0.10.1"
scipy = "^1.5.2"
jupyter = "^1.0.0"
jupyterlab = "^2.2.4"
scikit-learn = "^0.23.2"
tensorflow = "^2.3.1"
Keras = "^2.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
